src/objects/Customer_PromoCodes__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_PromoCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_and_Time__c</fullName>
        <description>Customer Agent used date and Time</description>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Display_PromoCode__c</fullName>
        <label>Display PromoCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoCode_Issue__c</fullName>
        <label>PromoCode Issue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoCode_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PromoCode Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promo_Code_Type__c</fullName>
        <label>Promo Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11111</fullName>
                </value>
                <value>
                    <fullName>22222</fullName>
                </value>
                <value>
                    <fullName>33333</fullName>
                </value>
                <value>
                    <fullName>44444</fullName>
                </value>
                <value>
                    <fullName>55555</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer PromoCode</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Customer PromoCodes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer PromoCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>